# XPCCI

./: .gitignore  Makefile  README.md  configure  configure.in
cci/: Makefile  cciCOM.h  cciPrivate.h
cci/base/: Makefile  cciIClassInfo.idl  cciIComponentManager.idl  cciIComponentRegistrar.idl  cciIMemory.idl  cciIModuleLoader.idl  cciIServiceManager.idl  cciIStringIterator.idl  cciIWeakReference.idl  cciIXPCOMSupports.idl
cci/bridge/: Makefile
cci/bridge/public/: Makefile  cciBridge.h  cciBridgeSupports.h  cciIBridgeInterfaceInfo.h  cciIBridgeManager.h
cci/ccireg/: Makefile  ccireg.cpp  cciregister
cci/components/: Makefile  cciAllocatorImpl.cpp  cciAllocatorImpl.h  cciCOMInit.cpp  cciCategoryManager.cpp  cciCategoryManager.h  cciComponentManager.cpp  cciComponentManager.h  cciGenericFactory.cpp  cciGenericFactory.h  cciManifestReader.h  cciMemoryImpl.cpp  cciNativeModuleLoader.cpp  cciNativeModuleLoader.h  cciStaticModuleLoader.cpp  cciStaticModuleLoader.h  cciString.cpp
cci/glue/: Makefile  cciAggregated.h  cciCOMGlue.cpp  cciCOMPtr.cpp  cciCOMPtr.h  cciComponentGlue.cpp  cciComponentManagerUtils.cpp  cciComponentManagerUtils.h  cciCore.h  cciDebug.h  cciEnumeratorUtils.cpp  cciEnumeratorUtils.h  cciErrors.h  cciGenericFactoryUtils.cpp  cciIAllocator.h  cciIGenericFactory.h  cciISupportsBase.h  cciIWeakReferenceUtils.h  cciId.cpp  cciId.h  cciInterfaceRequestorUtils.cpp  cciInterfaceRequestorUtils.h  cciMemory.h  cciNativeWrapper.h  cciPrivateHook.h  cciServiceManagerUtils.h  cciString.h  cciStubs.cpp  cciStubs.h  cciSupportsImpl.cpp  cciSupportsImpl.h  cciSupportsUtils.h  cciWeakReference.cpp  cciWeakReference.h
cci/glue/static/: Makefile
cci/idl/: Makefile  cciICategoryManager.idl  cciIFactory.idl  cciIInterfaceRequestor.idl  cciIMemory.idl  cciIModule.idl  cciIProgrammingLanguage.idl  cciISimpleEnumerator.idl  cciIStringEnumerator.idl  cciIStringIterator.idl  cciISupports.idl  ccirootidl.idl
cci/idl-parser/: header.py  typelib.py  xpidl.py  xpt.py
cci/io/: Makefile  cciFileStreams.cpp  cciFileStreams.h  cciIFileStreams.idl  cciIMemoryInputStream.idl  cciIStreams.idl  cciMemoryInputStream.cpp  cciMemoryInputStream.h  cciStreamModule.cpp
cci/xpcom/: Makefile
cci/xpcom/public/: Makefile  cciIXPCOMSupports.idl  cciXPCOMTypes.idl
config/: Makefile  Makefile.darwin-clang.mk  Makefile.darwin-gcc.mk  Makefile.gcc.mk  Makefile.msvc.mk  build.mk  config.mk  config.opt.in  idl.mk  packager.mk  rules.mk  unexported.exp
doc/: Doxyfile  Makefile
include/: Makefile  dm_config.h  dm_prolog.h
include/dm_ports/: Makefile  ac_dm_config.h.in  dmCompilers.h  dmCrt.cpp  dmCrt.h  dmDebugBreak.h  dmTarget.h  dmTypes.h
include/dm_ports/win/: _dmWinVer.h
include/unit_tests/: test_common.h
include/utils/: Makefile  dmTimer.h
runtime/: Makefile
runtime/glue/: Makefile  xpcciglue.cpp  xpcciglue.h
runtime/src/: Makefile  xpcci.cpp  xpcci.h
runtime/tests/: Makefile
runtime/tests/cci/: Makefile  test.mk  test_catmngr.cpp  test_cciinit.cpp  test_comptr.cpp  test_crossref.cpp  test_factory.cpp
runtime/tests/glue/: Makefile  test.mk  test_glue.cpp
tools/idl-parser/: setup.py
tools/idl-parser/xpidl/: header.py  typelib.py  xpt.py
utilities/: Makefile
utilities/include/: dm-string-template-def-char.h  dm-string-template-def-wchar.h  dm-string-template-undef.h  dmConstruct.h  dmDate.h  dmDebug.h  dmEnvironment.h  dmErrors.h  dmExceptions.h  dmFastMemory.h  dmHashMap.h  dmHashString.h  dmHashfuncs.h  dmHashtable.h  dmList.h  dmLoader.h  dmMemory.h  dmMutex.h  dmNew.h  dmPortability.h  dmRWLocks.h  dmSetOf.h  dmShared.h  dmString.h  dmTString.h  dmThread.h  dmTime.h  dmTraceMem.h  dmUtilitiesBase.h  dmVector.h  dmVersion.h  dm_utilities.h
utilities/include/plateform/linux/: _dmLoader.h  _dmMemory.cpp  _dmMutex.cpp  _dmMutex.h  _dmRWLocks.cpp  _dmRWLocks.h  _dmThread.cpp
utilities/include/plateform/win/: _dmLoader.h  _dmMemory.cpp  _dmMutex.cpp  _dmMutex.h  _dmRWLocks.cpp  _dmRWLocks.h  _dmThread.cpp
utilities/source/: dmDate.cpp  dmDebug.cpp  dmEnvironment.cpp  dmExceptions.cpp  dmFastMemory.cpp  dmList.cpp  dmMemory.cpp  dmMutex.cpp  dmPortability.cpp  dmRWLocks.cpp  dmString.cpp  dmTString.cpp  dmThread.cpp  dmTime.cpp  dmTraceMem.cpp  dmUtillitiesBase.cpp
utilities/tests/: Makefile
utilities/tests/strings/: Makefile  test_strings.cpp
